<resources>
    <string name="app_name">Sky Reference</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_item">Home</string>
    <string name="favourite_item">Favourite</string>
    <string name="alert_item">Alert</string>
    <string name="settings_item">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="weather_settings">Weather settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="update">Update</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="done">Done</string>
    <string name="loctation_title">Locations</string>
    <string name="pressure_txt">Pressure</string>
    <string name="humidity_txt">Humidity</string>
    <string name="wind_speed_txt">Wind Speed</string>
    <string name="cloud_txt">Cloud</string>
    <string name="delete_txt">Delete</string>
</resources>